nickel-lang-lib/tests/integration/fail/contracts/div_by_zero.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::Other'
1 + 1 / (1 - 1)
